# course-project

./:  README.md  .coverage  .env.example  .flake8  .gitignore  create_test_data.py  main.py  pyproject.toml  requirements.txt  spending_by_weekday_report.json  spending_by_workday_report.json  test_load.py
course-project/: pyproject.toml
data/: operations.xlsx
src/: main.py  models.py  reports.py  services.py  utils.py  views.py
tests/: test_models.py  test_reports.py  test_services.py  test_utils.py  test_views.py
