[tool.poetry]
name = "course-project"
version = "0.1.0"
description = "E-commerce project"
authors = ["Nikita Nazarov <nekit_2017@bk.ru>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true