[project]
name = "course-project"
version = "0.1.0"
description = ""
authors = [
    {name = "PoPlavok-код",email = "nekit_2017@bk.ru"}
]
requires-python = ">=3.13"
dependencies = [
    "pytest (>=9.1.1,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-cov (>=7.1.0,<8.0.0)",
    "mypy (>=2.3.0,<3.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=26.5.1,<27.0.0)"
]
